--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -7,6 +7,7 @@
         android:title="@string/action_settings"
         app:showAsAction="never" />
     <item
+        android:title="@string/action_refresh"
         android:id="@+id/action_refresh"
         android:icon="@drawable/ic_refresh_white_24dp"
         android:orderInCategory="100"
