--- a/app/src/main/res/menu/menu_website.xml
+++ b/app/src/main/res/menu/menu_website.xml
@@ -8,6 +8,7 @@
         android:title="@string/action_open_in_browser"
         app:showAsAction="never" />
     <item
+        android:title="@string/action_share"
         android:id="@+id/action_share"
         android:orderInCategory="100"
         android:icon="@drawable/ic_share_white_24dp"
