--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,6 +8,10 @@
     <color name="colorPrimary">#1cbf5f</color>
     <color name="colorAccent">#be1b0f</color>-->
 
+    <!-- <color name="colorPrimaryDark">#0023c6</color>
+     <color name="colorPrimary">#1744e8</color>
+     <color name="colorAccent">#bb17e8</color>-->
+
     <!--    Website Activity-->
     <color name="web_background_homepages">#80f2f2f2</color>
     <color name="web_background_content"></color>
