--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,7 +14,7 @@
 
     <!--    Website Activity-->
     <color name="web_background_homepages">#80f2f2f2</color>
-    <color name="web_background_content"></color>
+    <color name="web_background_content">#FFFFFFFF</color>
 
     <color name="background_light">#FFFFFFFF</color>
 </resources>
