--- a/app/src/main/res/layout/vertretungsplan_widget.xml
+++ b/app/src/main/res/layout/vertretungsplan_widget.xml
@@ -1,70 +1,12 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/vertretungwidget_relative"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#80FFFFFF"
+    android:background="@android:color/white"
     android:padding="@dimen/widget_margin">
 
-
-   <ScrollView
-       android:layout_width="match_parent"
-       android:layout_height="match_parent">
-
-      <LinearLayout
-          android:layout_width="match_parent"
-          android:layout_height="wrap_content"
-          android:orientation="vertical" >
-
-         <TextView
-             android:id="@+id/textView2"
-             android:layout_width="match_parent"
-             android:layout_height="wrap_content"
-             android:gravity="center"
-             android:text="Freitag 08.11.2019 (WocheB)"
-             android:textColor="@android:color/black"
-             android:textSize="30sp"
-             android:textStyle="bold" />
-
-         <ScrollView
-             android:layout_width="match_parent"
-             android:layout_height="match_parent">
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical" >
-
-               <TableLayout
-                   android:layout_width="match_parent"
-                   android:layout_height="match_parent">
-
-                  <TableRow
-                      android:layout_width="match_parent"
-                      android:layout_height="match_parent" >
-
-                     <TextView
-                         android:id="@+id/textView5"
-                         android:layout_width="wrap_content"
-                         android:layout_height="wrap_content"
-                         android:text="TextView" />
-                  </TableRow>
-
-                  <TableRow
-                      android:layout_width="match_parent"
-                      android:layout_height="match_parent" />
-
-                  <TableRow
-                      android:layout_width="match_parent"
-                      android:layout_height="match_parent" />
-
-                  <TableRow
-                      android:layout_width="match_parent"
-                      android:layout_height="match_parent" />
-               </TableLayout>
-            </LinearLayout>
-         </ScrollView>
-
-      </LinearLayout>
-   </ScrollView>
-
+    <LinearLayout
+        android:id="@+id/widget1_basic"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:orientation="vertical" />
 </RelativeLayout>
