--- a/app/src/main/res/layout/vertretungsplan_widget.xml
+++ b/app/src/main/res/layout/vertretungsplan_widget.xml
@@ -1,4 +1,5 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#6DFFFFFF"
@@ -8,5 +9,17 @@
         android:id="@+id/widget1_basic"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
-        android:orientation="vertical" />
+        android:orientation="vertical">
+
+    </LinearLayout>
+
+    <ImageButton
+        android:id="@+id/imageButton2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:contentDescription="@string/action_refresh"
+        app:srcCompat="@drawable/ic_refresh_black_24dp" />
+
 </RelativeLayout>
