--- a/app/src/main/res/layout/widget_body.xml
+++ b/app/src/main/res/layout/widget_body.xml
@@ -15,11 +15,12 @@
             android:layout_weight="1"
             android:background="@color/colorAccent"
             android:gravity="center|center_vertical"
+            android:text="test"
             android:textColor="@android:color/white"
-            android:textSize="36sp"
+            android:textSize="24sp"
             android:textStyle="bold"
             android:visibility="visible" />
-        <!--    android:padding="5sp"-->
+        android:padding="5sp"
 
         <TextView
             android:id="@+id/widgetBody_text2"
@@ -27,8 +28,8 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:gravity="center|center_vertical"
-            android:text=""
-            android:textSize="18sp"
+            android:text="test"
+            android:textSize="16sp"
             android:textStyle="bold"
             android:visibility="visible" />
 
@@ -38,8 +39,8 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:gravity="center|center_vertical"
-            android:text=""
-            android:textSize="18sp"
+            android:text="test"
+            android:textSize="16sp"
             android:textStyle="bold"
             android:visibility="visible" />
 
@@ -50,8 +51,9 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:gravity="center|center_vertical"
+            android:text="test"
             android:textColor="@color/colorAccent"
-            android:textSize="24sp"
+            android:textSize="22sp"
             android:textStyle="bold"
             android:visibility="visible" />
 
@@ -61,8 +63,8 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:gravity="center|center_vertical"
-            android:text=""
-            android:textSize="18sp"
+            android:text="test"
+            android:textSize="16sp"
             android:textStyle="bold"
             android:visibility="visible" />
 
@@ -73,8 +75,8 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:gravity="center_vertical|end"
-            android:text=""
-            android:textSize="12sp"
+            android:text="test"
+            android:textSize="10sp"
             android:visibility="visible" />
 
 
