refresh Widget on Refreshing Docs

--- a/app/src/main/res/layout/vertretungsplan_widget.xml
+++ b/app/src/main/res/layout/vertretungsplan_widget.xml
@@ -9,14 +9,12 @@
         android:id="@+id/widget1_basic"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
-        android:orientation="vertical">
-
-    </LinearLayout>
+        android:orientation="vertical" />
 
     <ImageButton
-        android:id="@+id/imageButton2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:id="@+id/widget1_refresh_button"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
         android:contentDescription="@string/action_refresh"
