--- a/app/src/main/res/layout/widget_body.xml
+++ b/app/src/main/res/layout/widget_body.xml
@@ -15,12 +15,12 @@
             android:layout_weight="1"
             android:background="@color/colorAccent"
             android:gravity="center|center_vertical"
-            android:text="test"
             android:textColor="@android:color/white"
             android:textSize="24sp"
             android:textStyle="bold"
-            android:visibility="visible" />
-        android:padding="5sp"
+            android:visibility="visible"
+            android:padding="5sp" />
+
 
         <TextView
             android:id="@+id/widgetBody_text2"
@@ -28,7 +28,6 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:gravity="center|center_vertical"
-            android:text="test"
             android:textSize="16sp"
             android:textStyle="bold"
             android:visibility="visible" />
@@ -39,7 +38,6 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:gravity="center|center_vertical"
-            android:text="test"
             android:textSize="16sp"
             android:textStyle="bold"
             android:visibility="visible" />
@@ -51,7 +49,6 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:gravity="center|center_vertical"
-            android:text="test"
             android:textColor="@color/colorAccent"
             android:textSize="22sp"
             android:textStyle="bold"
@@ -63,7 +60,6 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:gravity="center|center_vertical"
-            android:text="test"
             android:textSize="16sp"
             android:textStyle="bold"
             android:visibility="visible" />
@@ -75,7 +71,6 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:gravity="center_vertical|end"
-            android:text="test"
             android:textSize="10sp"
             android:visibility="visible" />
 
