fine tuning in widget

--- a/app/src/main/res/layout/widget_body.xml
+++ b/app/src/main/res/layout/widget_body.xml
@@ -11,10 +11,10 @@
         <TextView
             android:id="@+id/widgetBody_text1"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_weight="1"
             android:background="@color/colorAccent"
-            android:gravity="center"
+            android:gravity="center|center_vertical"
             android:textColor="@android:color/white"
             android:textSize="36sp"
             android:textStyle="bold"
@@ -24,9 +24,9 @@
         <TextView
             android:id="@+id/widgetBody_text2"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_weight="1"
-            android:gravity="center"
+            android:gravity="center|center_vertical"
             android:text=""
             android:textSize="18sp"
             android:textStyle="bold"
@@ -35,9 +35,9 @@
         <TextView
             android:id="@+id/widgetBody_text3"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_weight="1"
-            android:gravity="center"
+            android:gravity="center|center_vertical"
             android:text=""
             android:textSize="18sp"
             android:textStyle="bold"
@@ -47,20 +47,20 @@
         <TextView
             android:id="@+id/widgetBody_text4"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_weight="1"
-            android:gravity="center"
-            android:text=""
-            android:textSize="18sp"
+            android:gravity="center|center_vertical"
+            android:textColor="@color/colorAccent"
+            android:textSize="24sp"
             android:textStyle="bold"
             android:visibility="visible" />
 
         <TextView
             android:id="@+id/widgetBody_text5"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_weight="1"
-            android:gravity="center"
+            android:gravity="center|center_vertical"
             android:text=""
             android:textSize="18sp"
             android:textStyle="bold"
@@ -70,9 +70,9 @@
         <TextView
             android:id="@+id/widgetBody_text6"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_weight="1"
-            android:gravity="end"
+            android:gravity="center_vertical|end"
             android:text=""
             android:textSize="12sp"
             android:visibility="visible" />
