--- a/app/src/main/res/layout/widget_body.xml
+++ b/app/src/main/res/layout/widget_body.xml
@@ -18,8 +18,7 @@
             android:textColor="@android:color/white"
             android:textSize="24sp"
             android:textStyle="bold"
-            android:visibility="visible"
-            android:padding="5sp" />
+            android:visibility="visible" />
 
 
         <TextView
