--- a/app/src/main/res/layout/widget_day.xml
+++ b/app/src/main/res/layout/widget_day.xml
@@ -8,7 +8,7 @@
     <TextView
         android:id="@+id/widgetDay_title"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="30dp"
         android:gravity="center"
         android:text="Title"
         android:textColor="@android:color/black"
