Finetuning for Second Release

--- a/app/src/main/res/xml/vertretungsplan_widget_info.xml
+++ b/app/src/main/res/xml/vertretungsplan_widget_info.xml
@@ -4,7 +4,7 @@
     android:initialLayout="@layout/vertretungsplan_widget"
     android:minWidth="160dp"
     android:minHeight="40dp"
-    android:previewImage="@drawable/example_appwidget_preview"
+    android:previewImage="@drawable/widget_preview"
     android:resizeMode="horizontal|vertical"
     android:updatePeriodMillis="7200000"
     android:widgetCategory="home_screen"></appwidget-provider>
