--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -7,10 +7,10 @@
         android:title="@string/action_settings"
         app:showAsAction="never" />
     <item
-        android:title="@string/action_refresh"
         android:id="@+id/action_refresh"
         android:icon="@drawable/ic_refresh_white_24dp"
         android:orderInCategory="100"
+        android:title="@string/action_refresh"
         app:showAsAction="ifRoom" />
     <item
         android:id="@+id/action_refresh2"
@@ -18,8 +18,14 @@
         android:title="@string/action_refresh"
         app:showAsAction="never" />
     <item
+        android:id="@+id/action_update"
+        android:orderInCategory="100"
+        android:title="@string/menu_update"
+        app:showAsAction="never" />
+    <item
         android:id="@+id/action_impressum"
         android:orderInCategory="100"
         android:title="@string/menu_impressum"
         app:showAsAction="never" />
+
 </menu>
