Added nice loading animation with wheel

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -17,4 +17,6 @@
     <color name="web_background_content">#FFFFFFFF</color>
 
     <color name="background_light">#FFFFFFFF</color>
+
+    <color name="wheel_wheel">#03B8F4</color>
 </resources>
