--- a/app/src/main/res/drawable/ic_tomorrow_black_24dp.xml
+++ b/app/src/main/res/drawable/ic_tomorrow_black_24dp.xml
@@ -8,6 +8,7 @@
 
     <path
         android:fillColor="#FF000000"
-        android:pathData="M19,3h-1L18,1h-2v2L8,3L8,1L6,1v2L5,3c-1.11,0 -1.99,0.9 -1.99,2L3,19c0,1.1 0.89,2 2,2h14c1.1,0 2,-0.9 2,-2L21,5c0,-1.1 -0.9,-2 -2,-2zM19,19L5,19L5,8h14v11zM7,10h5v5L7,15z" />
+        android:pathData="m 4.5932203,3.9152543 h 1 v -2 h 2 v 2 H 15.59322 v -2 h 2 v 2 h 1 c 1.11,0 1.99,0.9 1.99,2 l 0.01,13.9999997 c 0,1.1 -0.89,2 -2,2 H 4.5932203 c -1.1,0 -2,-0.9 -2,-2 V 5.9152543 c 0,-1.1 0.9,-2 2,-2 z m 0,15.9999997 H 18.59322 V 8.9152543 H 4.5932203 Z m 11.9999997,-9 h -5 v 5 h 5 z" />
+
 
 </vector>
