--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -31,19 +31,19 @@
             <group >
                 <item
                     android:id="@+id/nav_website"
-                    android:icon="@drawable/ic_web_black_24dp"
+                    android:icon="@drawable/ic_home_black_24dp"
                     android:title="@string/menu_website" />
                 <item
                     android:id="@+id/nav_mebis"
-                    android:icon="@drawable/ic_link_black_24dp"
+                    android:icon="@drawable/ic_open_in_new_white_24dp"
                     android:title="@string/menu_mebis" />
                 <item
                     android:id="@+id/nav_mensa"
-                    android:icon="@drawable/ic_link_black_24dp"
+                    android:icon="@drawable/ic_open_in_new_white_24dp"
                     android:title="@string/menu_mensa" />
                 <item
                     android:id="@+id/nav_shop"
-                    android:icon="@drawable/ic_link_black_24dp"
+                    android:icon="@drawable/ic_open_in_new_white_24dp"
                     android:title="@string/menu_shop" />
                 <!--<item
                     android:id="@+id/nav_impressum"
@@ -57,6 +57,10 @@
                     android:id="@+id/nav_settings"
                     android:icon="@drawable/ic_settings_black_24dp"
                     android:title="@string/menu_settings" />
+                <item
+                    android:id="@+id/nav_about_author"
+                    android:icon="@drawable/ic_info_black_24dp"
+                    android:title="@string/menu_about_author" />
             </group>
         </menu>
     </item>
