Finetuning in Lehrerliste unenabled ListView in Widget UI Fixes

--- a/app/src/main/res/xml/changelog_master.xml
+++ b/app/src/main/res/xml/changelog_master.xml
@@ -3,9 +3,10 @@
     <release
         version="1.0.3"
         versioncode="103">
+        <change>Lehrerliste</change>
         <change>Automatisches Herunterladen und installieren von Updates</change>
         <change>GymWen Online Shop hinzugefügt</change>
-        <change>Code Optimierungen</change>
+        <change>Code und Widget Optimierungen</change>
     </release>
     <release
         version="1.0.2"
