Added TeacherSearch from VertretungsFragment + Setting to turnOff Shape of Kürzel

--- a/app/src/main/res/xml/changelog_master.xml
+++ b/app/src/main/res/xml/changelog_master.xml
@@ -1,5 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <changelog>
+    <release>
+        version="1.0.4"
+        versionCode="104"
+        <change>Klickbare Lehrerkürzel</change>
+    </release>
     <release
         version="1.0.3"
         versioncode="103">
