--- a/app/src/main/res/layout/activity_impressum.xml
+++ b/app/src/main/res/layout/activity_impressum.xml
@@ -9,11 +9,10 @@
     <fragment
         android:id="@+id/impressumFragment"
         android:name="com.asdoi.gymwen.main.Fragments.ImpressumFragment"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
